[gd_scene load_steps=5 format=3 uid="uid://dcdw85ejgs6au"]

[ext_resource type="Script" uid="uid://bs8la4m1b7c68" path="res://utils/debug/debug_ui.gd" id="1_p72ky"]
[ext_resource type="PackedScene" uid="uid://dim7k1m01584d" path="res://utils/debug/debug_menu.tscn" id="2_maeol"]
[ext_resource type="Resource" uid="uid://b40fpy6xu1hyh" path="res://player/resources/player_stats/stats_default.tres" id="3_vmo5k"]
[ext_resource type="LabelSettings" uid="uid://1nthrp5v2htf" path="res://utils/debug/debug_label_setting.tres" id="4_fmf0a"]

[node name="DebugUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_p72ky")
debug_menu = ExtResource("2_maeol")
player_stats = ExtResource("3_vmo5k")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActionLabel" type="Label" parent="CenterContainer"]
unique_name_in_owner = true
visible = false
top_level = true
layout_mode = 2
text = "TEXT"
label_settings = ExtResource("4_fmf0a")
horizontal_alignment = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Speed :"
label_settings = ExtResource("4_fmf0a")

[node name="AltitudeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Speed :"
label_settings = ExtResource("4_fmf0a")

[node name="TimerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Speed :"
label_settings = ExtResource("4_fmf0a")

[node name="FPSLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 10
text = "FPS :"
label_settings = ExtResource("4_fmf0a")
vertical_alignment = 2
